@@ -27,6 +27,10 @@ target_link_libraries ( ${TARGET}
     PRIVATE $<BUILD_INTERFACE:nlohmann_json::nlohmann_json>
 )
 
+if ( ${ENABLE_LEGACY_ANIMATION} )
+	target_compile_definitions( ${TARGET} PUBLIC LEGACY_ANIMATION=1 )
+endif ()
+
 if ( NOT "${PROJECT_VERSION}" STREQUAL "" )
     install (
         DIRECTORY    "${CMAKE_CURRENT_SOURCE_DIR}/include"
